--- a/src/modules/block-info/components/block-info-data/block-info-data.styles.less
+++ b/src/modules/block-info/components/block-info-data/block-info-data.styles.less
@@ -133,22 +133,8 @@
   text-decoration: underline;
 }
 
-@media @breakpoint-mobile-mid {
+@media @breakpoint-mobile {
   .BlockInfoData {
-    height: 100%;
-    max-width: unset;
-  }
-
-  .BlockInfoData__container {
-    height: 100%;
-    justify-content: center;
-    padding: 5px 24px;
+    display: none;
   }
 }
-
-@media @breakpoint-mobile-small {
-  .BlockInfoData__container {
-    padding: 5px 10px;
-  }
-}
-
