--- a/src/modules/common-elements/labels.styles.less
+++ b/src/modules/common-elements/labels.styles.less
@@ -204,27 +204,19 @@
     &.Highlight {
       > span:first-of-type {
         .mono-9;
-
-        color: @color-shadow-text;
       }
 
       > span:last-of-type {
         .mono-10;
-
-        color: @color-tertiary-text;
       }
     }
 
     > span:first-of-type {
       .mono-9;
-
-      color: @color-neutral;
     }
 
     > span:last-of-type {
       .mono-10;
-
-      color: @color-tertiary-text;
     }
   }
 }
